--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/SP2GX2c/png-clipart-bag-illustration-logo-shopping-logo-design-purple-other-thumbnail.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StayVista | Vacation Homes & Condo Rentals</title>
+    <title>Ecommerce | Online Prouduct shopping market</title>
   </head>
   <body>
     <div id="root"></div>
